chisquared bug fix; bettertogether

--- a/notebooks/all-kepler-matches.ipynb
+++ b/notebooks/all-kepler-matches.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,12 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#filter = (gaia_src_tbl['phot_g_mean_mag'] >= 18.) & (gaia_src_tbl['parallax'] > 0.01)\n",
-    "#gaia_src_tbl = gaia_src_tbl[filter]"
+    "min_columns = ['source_id', 'ra', 'dec', 'parallax', 'pmra', 'pmdec', 'parallax_error',\n",
+    "                'pmra_error', 'pmdec_error', 'parallax_pmra_corr', 'parallax_pmdec_corr',\n",
+    "                'pmra_pmdec_corr']\n",
+    "min_table = gaia_src_tbl[min_columns]"
    ]
   },
   {
@@ -65,7 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gaia_src_tbl = gaia_src_tbl.to_pandas()"
+    "min_table = min_table.to_pandas()\n",
+    "#full_table = gaia_src_tbl.to_pandas()"
    ]
   },
   {
@@ -77,17 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "195830\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "kepler_table_file = '../data/kepler_dr2_1arcsec.fits'\n",
     "hdul = fits.open(kepler_table_file)\n",
@@ -106,17 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "193244\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gaia_kepler_matches.sort_values(['kepid', 'kepler_gaia_ang_dist'], inplace=True)\n",
     "gaia_kepler_matches.drop_duplicates('kepid', inplace=True)\n",
@@ -136,8 +123,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "table = gaia_src_tbl.merge(gaia_kepler_matches, on='source_id', how='left')\n",
-    "len(table)"
+    "full_table = full_table.merge(gaia_kepler_matches, on='source_id', how='left')\n",
+    "len(full_table)"
    ]
   },
   {
@@ -147,7 +134,7 @@
    "outputs": [],
    "source": [
     "test_id = 2105885485289168768\n",
-    "print(table[table['source_id'] == test_id])"
+    "print(full_table[full_table['source_id'] == test_id])"
    ]
   },
   {
@@ -159,13 +146,372 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "pairs_file = '../data/matched-pairs-dustin.fits'\n",
     "hdul = fits.open(pairs_file)\n",
     "pairs = hdul[0].data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6750, 6753,    1, ...,   -1,   -1,   -1],\n",
+       "       [6750, 6753,    5, ...,   -1,   -1,   -1],\n",
+       "       [   3,    5, 1446, ...,   -1,   -1,   -1],\n",
+       "       ...,\n",
+       "       [   3,    2, 1446, ...,   -1,   -1,   -1],\n",
+       "       [6755,    2, 1446, ...,   -1,   -1,   -1],\n",
+       "       [  10,   13,  333, ...,   -1,   -1,   -1]], dtype=int32)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairs[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>159</th>\n",
+       "      <th>160</th>\n",
+       "      <th>161</th>\n",
+       "      <th>162</th>\n",
+       "      <th>163</th>\n",
+       "      <th>164</th>\n",
+       "      <th>165</th>\n",
+       "      <th>166</th>\n",
+       "      <th>167</th>\n",
+       "      <th>168</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6750</td>\n",
+       "      <td>6753</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6754</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6750</td>\n",
+       "      <td>6753</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6754</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1446</td>\n",
+       "      <td>4</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1446</td>\n",
+       "      <td>7</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6755</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1446</td>\n",
+       "      <td>8</td>\n",
+       "      <td>6767</td>\n",
+       "      <td>6766</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1446</td>\n",
+       "      <td>4</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>6755</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1446</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6767</td>\n",
+       "      <td>6766</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>333</td>\n",
+       "      <td>342</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 169 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    0     1     2     3     4     5    6    7    8    9   ...   159  160  161  \\\n",
+       "0  6750  6753     1  6754    -1    -1   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "1  6750  6753     5     0  6754    -1   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "2     3     5  1446     4     8     7    6   -1   -1   -1 ...    -1   -1   -1   \n",
+       "3     5     2     4     7    -1    -1   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "4     3     5     2  1446     7    -1   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "5     3     1     2     4    -1    -1   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "6  6755     2  1446     8  6767  6766   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "7     3     2  1446     4    -1    -1   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "8  6755     2  1446     6  6767  6766   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "9    10    13   333   342    -1    -1   -1   -1   -1   -1 ...    -1   -1   -1   \n",
+       "\n",
+       "   162  163  164  165  166  167  168  \n",
+       "0   -1   -1   -1   -1   -1   -1   -1  \n",
+       "1   -1   -1   -1   -1   -1   -1   -1  \n",
+       "2   -1   -1   -1   -1   -1   -1   -1  \n",
+       "3   -1   -1   -1   -1   -1   -1   -1  \n",
+       "4   -1   -1   -1   -1   -1   -1   -1  \n",
+       "5   -1   -1   -1   -1   -1   -1   -1  \n",
+       "6   -1   -1   -1   -1   -1   -1   -1  \n",
+       "7   -1   -1   -1   -1   -1   -1   -1  \n",
+       "8   -1   -1   -1   -1   -1   -1   -1  \n",
+       "9   -1   -1   -1   -1   -1   -1   -1  \n",
+       "\n",
+       "[10 rows x 169 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pairs = pd.DataFrame(data=pairs)\n",
+    "pairs.iloc[:10]"
    ]
   },
   {
@@ -177,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +577,7 @@
     "    returns covariance matrix C corresponding to x\n",
     "    \"\"\"\n",
     "    names = ['parallax', 'pmra', 'pmdec']\n",
-    "    C = np.diag(make_xerr(star))\n",
+    "    C = np.diag(make_xerr(star)**2)\n",
     "    for i, name1 in enumerate(names):\n",
     "        for j, name2 in enumerate(names):\n",
     "            if j >= i:\n",
@@ -252,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,12 +622,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%time\n",
     "chisqs = np.zeros_like(pairs) - 1.\n",
     "\n",
-    "for i,row in tqdm(enumerate(pairs)):\n",
-    "    primary = table.iloc[i]\n",
+    "for i,row in tqdm(enumerate(pairs[:100])):\n",
+    "    primary = min_table.iloc[i]\n",
     "    row_mask = (row > -1) & (row > i) # indices in row for matches to compute\n",
-    "    matches = table.iloc[row[row_mask]] # ignore non-matches and duplicates\n",
+    "    matches = min_table.iloc[row[row_mask]] # ignore non-matches and duplicates\n",
     "    if np.sum(row_mask) > 0:\n",
     "        row_of_chisqs = matches.apply(check_with_primary, args=(primary,), axis=1)\n",
     "        chisqs[i,row_mask] = row_of_chisqs.values\n"
@@ -313,8 +660,8 @@
    "outputs": [],
    "source": [
     "# optional - load up already-saved outputs\n",
-    "hdul = fits.open('../data/chisqs_matched-pairs.fits')\n",
-    "chisqs = hdul[0].data"
+    "#hdul = fits.open('../data/chisqs_matched-pairs.fits')\n",
+    "#chisqs = hdul[0].data"
    ]
   },
   {
